// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model Serialization Service UT serialize() should serialize a non-empty app 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "accountId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "accountId",
        "type": "parent",
      },
      "to": "account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "imageId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "imageId",
        "type": "parent",
      },
      "to": "image=image:v1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "serverKey",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "serverKey",
        "type": "parent",
      },
      "to": "server=backend,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
      ],
      "from": "server=backend,app=test-app",
      "relationship": {
        "onField": "serverKey",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
      ],
      "from": "image=image:v1,app=test-app",
      "relationship": {
        "onField": "imageId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
      ],
      "from": "account=account,app=test-app",
      "relationship": {
        "onField": "accountId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "accountId",
          "toField": "regionId",
        },
      ],
      "from": "account=account,app=test-app",
      "relationship": {
        "onField": "accountId",
        "toField": "regionId",
        "type": "parent",
      },
      "to": "region=region-1,account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "regionId",
          "toField": "accountId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "regionId",
          "toField": "accountId",
        },
      ],
      "from": "region=region-1,account=account,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "accountId",
        "type": "child",
      },
      "to": "account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "environmentName",
        },
      ],
      "from": "region=region-1,account=account,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "environmentName",
        "type": "parent",
      },
      "to": "environment=qa,region=region-1,account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
      ],
      "from": "environment=qa,region=region-1,account=account,app=test-app",
      "relationship": {
        "onField": "environmentName",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region-1,account=account,app=test-app",
    },
  ],
  "models": {
    "account=account,app=test-app": {
      "className": "@octo/Account",
      "model": {
        "accountId": "account",
        "accountType": "aws",
      },
    },
    "app=test-app": {
      "className": "@octo/App",
      "model": {
        "name": "test-app",
      },
    },
    "environment=qa,region=region-1,account=account,app=test-app": {
      "className": "@octo/Environment",
      "model": {
        "environmentName": "qa",
        "environmentVariables": {},
      },
    },
    "image=image:v1,app=test-app": {
      "className": "@octo/Image",
      "model": {
        "dockerOptions": {
          "dockerfilePath": "/Dockerfile",
        },
        "imageId": "v1",
        "imageName": "image",
        "imageTag": "v1",
      },
    },
    "region=region-1,account=account,app=test-app": {
      "className": "@octo/Region",
      "model": {
        "regionId": "region-1",
      },
    },
    "server=backend,app=test-app": {
      "className": "@octo/Server",
      "model": {
        "serverKey": "backend",
      },
    },
  },
  "overlays": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize an empty app 1`] = `
{
  "anchors": [],
  "dependencies": [],
  "models": {
    "app=test-app": {
      "className": "@octo/App",
      "model": {
        "name": "test-app",
      },
    },
  },
  "overlays": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize model anchors 1`] = `
{
  "anchors": [
    {
      "anchorId": "anchor-1",
      "className": "@octo/TestAnchor",
      "parent": {
        "context": "app=test-app",
      },
      "properties": {},
    },
  ],
  "dependencies": [],
  "models": {
    "app=test-app": {
      "className": "@octo/App",
      "model": {
        "name": "test-app",
      },
    },
  },
  "overlays": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize only boundary members 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "regionId",
          "toField": "accountId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "regionId",
          "toField": "accountId",
        },
      ],
      "from": "region=region-1,account=account,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "accountId",
        "type": "child",
      },
      "to": "account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "environmentName",
        },
      ],
      "from": "region=region-1,account=account,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "environmentName",
        "type": "parent",
      },
      "to": "environment=qa,region=region-1,account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
      ],
      "from": "account=account,app=test-app",
      "relationship": {
        "onField": "accountId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "accountId",
          "toField": "regionId",
        },
      ],
      "from": "account=account,app=test-app",
      "relationship": {
        "onField": "accountId",
        "toField": "regionId",
        "type": "parent",
      },
      "to": "region=region-1,account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "accountId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "accountId",
        "type": "parent",
      },
      "to": "account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
      ],
      "from": "environment=qa,region=region-1,account=account,app=test-app",
      "relationship": {
        "onField": "environmentName",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region-1,account=account,app=test-app",
    },
  ],
  "models": {
    "account=account,app=test-app": {
      "className": "@octo/Account",
      "model": {
        "accountId": "account",
        "accountType": "aws",
      },
    },
    "app=test-app": {
      "className": "@octo/App",
      "model": {
        "name": "test-app",
      },
    },
    "environment=qa,region=region-1,account=account,app=test-app": {
      "className": "@octo/Environment",
      "model": {
        "environmentName": "qa",
        "environmentVariables": {},
      },
    },
    "region=region-1,account=account,app=test-app": {
      "className": "@octo/Region",
      "model": {
        "regionId": "region-1",
      },
    },
  },
  "overlays": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize overlay with multiple anchors of same parent 1`] = `
{
  "anchors": [
    {
      "anchorId": "anchor-1",
      "className": "@octo/TestAnchor",
      "parent": {
        "context": "app=test-app",
      },
      "properties": {},
    },
    {
      "anchorId": "anchor-2",
      "className": "@octo/TestAnchor",
      "parent": {
        "context": "app=test-app",
      },
      "properties": {},
    },
  ],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "accountId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "accountId",
        "type": "parent",
      },
      "to": "account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "overlayId",
        },
      ],
      "from": "app=test-app",
      "relationship": undefined,
      "to": "@octo/test-overlay=overlay-1",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "overlayId",
        },
      ],
      "from": "app=test-app",
      "relationship": undefined,
      "to": "@octo/test-overlay=overlay-1",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
      ],
      "from": "@octo/test-overlay=overlay-1",
      "relationship": undefined,
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
      ],
      "from": "@octo/test-overlay=overlay-1",
      "relationship": undefined,
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
      ],
      "from": "account=account,app=test-app",
      "relationship": {
        "onField": "accountId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
  ],
  "models": {
    "account=account,app=test-app": {
      "className": "@octo/Account",
      "model": {
        "accountId": "account",
        "accountType": "aws",
      },
    },
    "app=test-app": {
      "className": "@octo/App",
      "model": {
        "name": "test-app",
      },
    },
  },
  "overlays": [
    {
      "className": "@octo/TestOverlay",
      "overlay": {
        "anchors": [
          {
            "anchorId": "anchor-1",
            "parent": {
              "context": "app=test-app",
            },
            "properties": {},
          },
          {
            "anchorId": "anchor-2",
            "parent": {
              "context": "app=test-app",
            },
            "properties": {},
          },
        ],
        "overlayId": "overlay-1",
        "properties": {},
      },
    },
  ],
}
`;

exports[`Model Serialization Service UT serialize() should serialize two overlay dependencies with each other 1`] = `
{
  "anchors": [
    {
      "anchorId": "anchor-1",
      "className": "@octo/TestAnchor",
      "parent": {
        "context": "app=test-app",
      },
      "properties": {},
    },
    {
      "anchorId": "anchor-2",
      "className": "@octo/TestAnchor",
      "parent": {
        "context": "app=test-app",
      },
      "properties": {},
    },
  ],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "accountId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "accountId",
        "type": "parent",
      },
      "to": "account=account,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "overlayId",
        },
      ],
      "from": "app=test-app",
      "relationship": undefined,
      "to": "@octo/test-overlay=overlay-1",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "overlayId",
        },
      ],
      "from": "app=test-app",
      "relationship": undefined,
      "to": "@octo/test-overlay=overlay-2",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
      ],
      "from": "@octo/test-overlay=overlay-2",
      "relationship": undefined,
      "to": "app=test-app",
    },
    {
      "behaviors": [],
      "from": "@octo/test-overlay=overlay-2",
      "relationship": undefined,
      "to": "@octo/test-overlay=overlay-1",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "overlayId",
          "toField": "name",
        },
      ],
      "from": "@octo/test-overlay=overlay-1",
      "relationship": undefined,
      "to": "app=test-app",
    },
    {
      "behaviors": [],
      "from": "@octo/test-overlay=overlay-1",
      "relationship": undefined,
      "to": "@octo/test-overlay=overlay-2",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "accountId",
          "toField": "name",
        },
      ],
      "from": "account=account,app=test-app",
      "relationship": {
        "onField": "accountId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
  ],
  "models": {
    "account=account,app=test-app": {
      "className": "@octo/Account",
      "model": {
        "accountId": "account",
        "accountType": "aws",
      },
    },
    "app=test-app": {
      "className": "@octo/App",
      "model": {
        "name": "test-app",
      },
    },
  },
  "overlays": [
    {
      "className": "@octo/TestOverlay",
      "overlay": {
        "anchors": [
          {
            "anchorId": "anchor-2",
            "parent": {
              "context": "app=test-app",
            },
            "properties": {},
          },
        ],
        "overlayId": "overlay-2",
        "properties": {},
      },
    },
    {
      "className": "@octo/TestOverlay",
      "overlay": {
        "anchors": [
          {
            "anchorId": "anchor-1",
            "parent": {
              "context": "app=test-app",
            },
            "properties": {},
          },
        ],
        "overlayId": "overlay-1",
        "properties": {},
      },
    },
  ],
}
`;
